# Telegram-Bridge-MCP

./: .env.example  .gitignore  AGENTS.md  BEHAVIOR.md  CHANGELOG.md  CLAUDE.md  COMMUNICATION.md  DESIGN.md  Dockerfile  FORMATTING.md  HANDOFF.md  LOOP-PROMPT.md  README.md  SECURITY-MODEL.md  SESSION-RECORDING.md  SETUP.md  loop-prompt.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: overseer.agent.md  task-runner.agent.md  worker.agent.md
.github/hooks/: telegram-loop-guard.json
.github/instructions/: telegram-communication.instructions.md  typescript-standards.instructions.md  worker-rules.instructions.md
.github/workflows/: ci.yml  publish.yml
changelog/: 2026-03-23_v4.6.3.md  2026-03-26_v4.6.7.md  2026-03-26_v4.6.8.md  2026-04-04_v5.0.1.md  2026-04-04_v5.1.0.md  2026-05-04_v7.4.0.md  unreleased.md
docs/: agent-setup.md  behavior.md  communication.md  coverage-report-2026-04-04.md  customization.md  design.md  manual-test-walkthrough.md  merge-policy.md  message-response-standard.md  migration-v5-to-v6.md  multi-session-flow.md  multi-session-plan.md  multi-session-test-script.md  multi-session.md  outbound-proxy.md  release-announcement-v6-draft.md  session-profiles.md  setup.md  super-tools.md  token-cost-analysis.md  v3-message-store.md
patches/: @tsdotnet__collection-base.patch  @tsdotnet__compare.patch  @tsdotnet__exceptions.patch  @tsdotnet__queue.patch
profiles/: Overseer.json  Worker.json
reminders/: README.md
rust/: .gitignore  Cargo.toml  build.rs  mingw64-toolchain.cmake
rust/.cargo/: config.local.toml.example  config.toml
rust/patches/whisper-rs-sys/: build.rs
rust/src/: lib.rs  main.rs  markdown.rs  server.rs  telegram.rs  topic_state.rs  transcribe.rs  tts.rs  typing_state.rs
rust/src/tools/: answer_callback_query.rs  ask.rs  cancel_typing.rs  choose.rs  delete_message.rs  download_file.rs  edit_message_text.rs  forward_message.rs  get_agent_guide.rs  get_chat.rs  get_me.rs  get_updates.rs  mod.rs  notify.rs  pin_message.rs  restart_server.rs  send_audio.rs  send_chat_action.rs  send_confirmation.rs  send_document.rs  send_message.rs  send_photo.rs  send_video.rs  send_voice.rs  set_commands.rs  set_reaction.rs  set_topic.rs  show_typing.rs  update_status.rs  wait_for_callback_query.rs  wait_for_message.rs
scripts/: gen-build-info.mjs
src/: action-registry.ts  agent-approval.test.ts  agent-approval.ts  animation-state.test.ts  animation-state.ts  auto-approve.ts  behavior-tracker.test.ts  behavior-tracker.ts  bounce-state.test.ts  bounce-state.ts  built-in-commands.test.ts  built-in-commands.ts  channel.ts  cli-args.ts  config.test.ts  config.ts  debug-log.ts  dequeue-endpoint.ts  dm-permissions.test.ts  dm-permissions.ts  event-endpoint.test.ts  event-endpoint.ts  first-use-hints.test.ts  health-check.test.ts  health-check.ts  hook-animation.integration.test.ts  hook-animation.test.ts  hybrid-duplication-detector.ts  index.ts  launcher.ts  local-log.test.ts  local-log.ts  markdown.test.ts  markdown.ts  message-store.test.ts  message-store.ts  multi-session-callbacks.test.ts  multi-session.integration.test.ts  outbound-proxy.test.ts  outbound-proxy.ts  (+57 more)
tasks/: AGENTS.md  OVERSEER-PROMPT.md  README.md  WORKER-PROMPT.md  claim.ps1  worktree-workflow.md
(+299 files in other folders)
