[package]
name = "telegram-bridge-mcp"
version = "0.1.0"
edition = "2021"
description = "Telegram MCP bridge server — Rust port"

[[bin]]
name = "telegram-bridge-mcp"
path = "src/main.rs"

[dependencies]
# MCP SDK
rmcp = { version = "0.16", features = ["server", "transport-io"] }

# Telegram Bot API (types + async HTTP client)
frankenstein = { version = "0.47", features = ["client-reqwest", "trait-async"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JSON Schema (for rmcp tool parameters)
schemars = "1"

# HTTP (for direct multipart calls like sendVoice)
reqwest = { version = "0.12", features = ["multipart", "json"] }

# Async utilities (BoxFuture etc. used by rmcp internals)
futures = "0.3"

# Env vars
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging — write to stderr so stdout is clean for MCP JSON-RPC
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
